--- a/build.gradle
+++ b/build.gradle
@@ -14,7 +14,7 @@ ext {
 }
 
 task downloadVertx(type: Download) {
-	onlyIf { !file("$buildDir/$downloadFilename").exists() }
+	overwrite false
 	src downloadUrlPath + downloadFilename
 	dest buildDir
 }
