fixing command line

--- a/build.gradle
+++ b/build.gradle
@@ -31,7 +31,7 @@ task runMapsExample(type: Exec) {
 	dependsOn unzipVertx
 	ext { vertxBinDir = "$buildDir/${downloadFilename - '.zip'}/bin" }
 	workingDir "$projectDir/vertx"
-	commandLine "$vertxBinDir/vertx run start.groovy"
+	commandLine "$vertxBinDir/vertx", "run", "start.groovy"
 	underWindows {
 		commandLine "cmd", "/c", "$vertxBinDir/vertx.bat", "run", "start.groovy"
 	}
